# InvPro

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  backtest_notes.md  debug_routes.py  dry_run_test.py  main.py  manual_login.py  pyproject.toml  replace_urls.py  requirements.txt  run.bat  stop.bat  test_signin.py  trading_state.db
api/: app.py  dependencies.py  models.py  routes.py  server.py  store.py  ws.py
config/: settings.py
core/: clock.py  database.py  event_bus.py  events.py  news_classifier.py  news_ingestor.py  parser.py  replay_engine.py  scraper.py  session_manager.py  storage.py  strategy.py  validator.py
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx  config.js  index.css
dashboard/src/components/dashboard/: PositionCard.jsx  (+4 more)
dashboard/src/contexts/: LiveDataContext.jsx
dashboard/src/hooks/: useFetch.js  useLiveTradingData.js  usePaginatedFetch.js
migrations/: 001_initial.sql  002_explainability.sql  003_execution_audit.sql  004_news_events.sql  005_partial_tp.sql
paper_trading/: __init__.py  main.py
paper_trading/config/: __init__.py  settings.py
paper_trading/core/: __init__.py  account_ledger.py  journal.py  order_manager.py  paper_broker.py  performance.py  risk_manager.py  signal_router.py
paper_trading/utils/: __init__.py  logger.py  market_hours.py
tests/: conftest.py  test_hard_risk_limits.py  test_news.py  test_paper_broker.py  test_parser.py  test_partial_tp.py  test_risk_manager.py  test_signal_router.py  test_storage.py  test_strategy.py  test_validator.py
utils/: logger.py
(+16 files in other folders)
